# shoken-webapp

./: .gitignore  Cargo.toml  Dockerfile  Procfile  heroku.yml  package-lock.json  package.json
asset/css/: base.css  styles.css
asset/html/: base.html  header.html  index.html  receipts.html
asset/js/: common.js  main.js  receipts.js  receipts.ts
asset/ts/: receipts.js
src/: config.rs  main.rs  setting.rs
src/handlers/: upload.rs
src/modules/csv/: lib.rs
src/services/: common.rs  csv_processor.rs  factroy.rs  mod.rs  templete.rs
src/services/csv/: lib.rs
src/services/dividend_list/: dividend_list.rs  lib.rs  mod.rs
src/services/profit_and_loss/: lib.rs  mod.rs  profit_and_loss.rs
src/view/: index.html
