[package]
name = "shoken-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
chardetng = "0.1.17"
csv = "1.3.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
futures-util = "0.3.30"
openssl = "0.10.64"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
